Fixed background stretching

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body { /*Sets the background for the page to be light blue*/
     background-image: url("./forest.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 100%;
+    background-size: cover;
 }
 
 h1 { /*Used by the central large title */
